--- a/faq.html
+++ b/faq.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Facebook privacy watcher</title>
+	<title>Facebook Privacy Analyzer & Watcher</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<style>
 		.btn-lg.round {
@@ -18,30 +18,54 @@
 	</style>
 </head>
 <body>
-	<a href="popup.html" class="btn btn-primary btn-sm round" style="position: fixed; bottom: 10px;left: 10px"><-</a>
-	<div>
-		<img src="img/ppulogo.png" style="width:50px;height:50px"/>
-		<h4 style="display: inline">Palestime poly.. university - A Graduation project</h4><hr/>
-	</div>
-	<div class="container-fluid">
-		<h3>pla pla pal</h3>
-		<p>pla pal pal pla pal pal pla pal pal pla pal pal pla pal pal pla pal pal pla pal pal pla pal pal pla pal pal </p>
-		<hr/>
-		<h3>pla pla pal</h3>
-		<p>pla pal pal pla pal pal pla pal pal pla pal pal pla pal pal pla pal pal pla pal pal pla pal pal pla pal pal </p>
-		<hr/>
-		<h3>pla pla pal</h3>
-		<p>pla pal pal pla pal pal pla pal pal pla pal pal pla pal pal pla pal pal pla pal pal pla pal pal pla pal pal </p>
-		<hr/>
-		<h3>pla pla pal</h3>
-		<p>pla pal pal pla pal pal pla pal pal pla pal pal pla pal pal pla pal pal pla pal pal pla pal pal pla pal pal </p>
-		<hr/>
-		<h3>pla pla pal</h3>
-		<p>pla pal pal pla pal pal pla pal pal pla pal pal pla pal pal pla pal pal pla pal pal pla pal pal pla pal pal </p>
-		<hr/>
-		<h3>pla pla pal</h3>
-		<p>pla pal pal pla pal pal pla pal pal pla pal pal pla pal pal pla pal pal pla pal pal pla pal pal pla pal pal </p>
-		<hr/>
-	</div>
+<a href="popup.html" class="btn btn-primary btn-sm round" style="position: fixed; bottom: 10px;left: 10px"><-</a>
+<div>
+	<img src="img/ppulogo.png" style="width:50px;height:50px"/>
+	<h4 style="display: inline">Facebook Privacy Analyzer & Watcher Research</h4><hr/>
+</div>
+<div class="container-fluid">
+	<h3>What are FPA and FPW?</h3>
+	<br>
+	<p>It's a browser extension (Chrome,Firefox)</p>
+	<p><b>FPA: Facebook Privacy Analyzer</b></p>
+	<p>used to collect data about facebook users (who want to participate).</p>
+	<p><b>FPW: Facebook Privacy Watcher</b></p>
+	<p>Used to help user to customize its privacy settings on Facebook via C4PS.</p>
+	<hr/>
+	<h3>What do we collect about you?</h3>
+	<br>
+	<p>We will collect about you:</p>
+	<li>Your Friend IDs.</li>
+	<li>Your Activity Log.</li>
+	<li>Information provided in "About" section in your profile.</li>
+	<li>Liked pages and joined groups.</li>
+	<li>Session time and the time you will spend on posts.</li>
+	<hr/>
+	<h3>What is C4PS?</h3>
+	<br>
+	<p><b>C</b>olors <b>for</b> <b>P</b>rivacy <b>S</b>ettings, it provides easy access to your privacy settings.</p>
+	<p>It uses colors to help you adjusting posts on Facebook. i.e:</p>
+	<li>Green: Public Post (Visible to every one).</li>
+	<li>Yellow: Friends.</li>
+	<li>Blue: Cutom Post (Selected Friends).</li>
+	<li>Red: Only me.</li>
+	<hr/>
+	<h3>Why this Research?</h3>
+	<br>
+	<p>Its a renewing of previous study to examine user behaviour on Facebook.</p>
+	<hr/>
+	<h3>What happend to the collected Data?</h3>
+	<br>
+	<p>Your data will be accumulated with other participants data, then it will be analyzed to obtain user behavior.
+		<b>Anonymization</b> is to be considered.</p>
+	<hr/>
+	<h3>How Anonymization is to be taken into account?</h3>
+	<br>
+	<p>Your data will be collected without your identity. i.e: we know that someone clicked like, but whom? we don't know.</p>
+	<hr/>
+	<h3>Example?</h3>
+	<br>
+	<p>You can take a look on the previous study at this <b>link</b>.</p>
+</div>
 </body>
 </html>
