--- a/aboutus.html
+++ b/aboutus.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Facebook privacy watcher</title>
+	<title>Facebook Privacy Analyzer & Watcher</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<style>
 		.btn-lg.round {
@@ -18,42 +18,45 @@
 	</style>
 </head>
 <body>
-	<a href="popup.html" class="btn btn-primary btn-sm round" style="position: fixed; bottom: 10px;left: 10px"><-</a>
-	<div>
-		<img src="img/ppulogo.png" style="width:50px;height:50px"/>
-		<h4 style="display: inline">Palestime poly.. university - A Graduation project</h4><hr/>
-	</div>
-	<div class="container-fluid">
-		<h3>Whai is ....</h3>
-		<p>Facebook Privacy Watcher is free software: you can redistribute it and/or modify
-			it under the terms of the GNU General Public License as published by
-			the Free Software Foundation, either version 3 of the License, or
-			(at your option) any later version.</p>
-		<hr/>
+<a href="popup.html" class="btn btn-primary btn-sm round" style="position: fixed; bottom: 10px;left: 10px"><-</a>
+<div>
+	<img src="img/ppulogo.png" style="width:50px;height:50px"/>
+	<h4 style="display: inline">Facebook Privacy Analyzer & Watcher Research</h4><hr/>
+</div>
+<div class="container-fluid">
+	<h3>Whai is this plug-in?</h3>
+	<p>Facebook Privacy Watcher is free software: you can redistribute it and/or modify
+		it under the terms of the GNU General Public License as published by
+		the Free Software Foundation, either version 3 of the License, or
+		(at your option) any later version.</p>
 
-		<h3>Who are we?</h3>
-		<p>pla pal pal pla pal pal pla pal pal pla pal pal pla pal pal pla pal pal pla pal pal pla pal pal pla pal pal </p>
-		<hr/>
+	<hr/>
 
-		<h3>Authors</h3>
-		<ol>
-			<li>Abdulhamead Abuzanunah - abozanona@gmail.com</li>
-			<li>Hamzah bahar - abozanona@gmail.com</li>
-			<li>Meqdad darweesh - abozanona@gmail.com</li>
-			<li>hani salah - abozanona@gmail.com</li>
-			<li>pla pla pla - abozanona@gmail.com</li>
-		</ol>
-		<hr/>
+	<h3>Who are we?</h3>
+	<p>We are a research group in computer field, this tool will help us to collect a behavioral data about the participants.</p>
+	<p>On this research, two universities the researchers belongs to, Palestine Polytechnic University & Technische Universität Darmstadt.</p>
 
-		<h3>Licence</h3>
-		<p>Facebook Privacy Watcher is distributed in the hope that it will be useful,
-			but WITHOUT ANY WARRANTY; without even the implied warranty of
-			MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-			GNU General Public License for more details.</p>
-		<p>You should have received a copy of the GNU General Public License
-			along with this program. If not, see <a href="http://www.gnu.org/licenses/">http://www.gnu.org/licenses/</a>.
-		</p>
-		<hr/>
-	</div>
+	<hr/>
+
+	<h3>Authors</h3>
+	<ol>
+		<li>Hani Salah - hani@ppu.edu</li>
+		<li>Thomas Paul - thomas.paul@cs.tu-darmstadt.de</li>
+		<li>Abdulhamead Abuzanunah - abozanona@gmail.com</li>
+		<li>Meqdad darweesh - meqdad.darweesh@gmail.com</li>
+		<li>Hamzah Bahar - hamzah.bahar@outlook.com</li>
+	</ol>
+	<hr/>
+
+	<h3>Licence</h3>
+	<p>Facebook Privacy Watcher is distributed in the hope that it will be useful,
+		but WITHOUT ANY WARRANTY; without even the implied warranty of
+		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+		GNU General Public License for more details.</p>
+	<p>You should have received a copy of the GNU General Public License
+		along with this program. If not, see <a href="http://www.gnu.org/licenses/">http://www.gnu.org/licenses/</a>.
+	</p>
+	<hr/>
+</div>
 </body>
 </html>
