--- a/popup.html
+++ b/popup.html
@@ -26,7 +26,7 @@
 		<div class="row">
 			<div class="col-sm-6">
 				<a href="faq.html" class="btn btn-primary btn-lg round">F.A.Q</a><br/>
-				<a href="privacy.html" class="btn btn-primary btn-lg round">Privacy checkup</a><br/>
+				<!--a href="privacy.html" class="btn btn-primary btn-lg round">Privacy checkup</a><br/-->
 				<a href="settings.html" class="btn btn-primary btn-lg round">Settings</a><br/>
 				<a href="aboutus.html" class="btn btn-primary btn-lg round">About us</a><br/>
 			</div>
@@ -37,5 +37,14 @@
 			</div>
 		</div>
 	</div>
+	<div id="installWelcome" style="display: none;background: rgba(0,0,0,0.5);position: absolute;left: 0px;top: 0px;right: 0px;bottom: 0px;">
+		<div style="float: right">
+			<img src="arrow.png" style="width:400px;height: 400px;float: right"/>
+			<h3>You can always open this page <br/> from the extention icon above</h3>
+		</div>
+	</div>
+	<script src="js/global/jquery.min.js"></script>
+	<script src="js/global/generalFunctions.js"></script>
+	<script src="popup.js"></script>
 </body>
 </html>
