--- a/popup.html
+++ b/popup.html
@@ -33,7 +33,7 @@
 			<div class="col-sm-6 left-separator text-center">
 				<br/><img src="img/fpw.jpg" class="img-rounded img-responsive" style="width: 200px"/><br/><br/>
 				<h6>Facebook privacy watcher.</h6>
-				<a href="feedback.html" class="btn btn-primary">Send us feedback</a>
+				<a target="_blank" href="https://fba.ppu.edu/" class="btn btn-primary">Read more/Subscribe</a>
 			</div>
 		</div>
 	</div>
