--- a/aboutus.html
+++ b/aboutus.html
@@ -54,9 +54,10 @@
 		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 		GNU General Public License for more details.</p>
 	<p>You should have received a copy of the GNU General Public License
-		along with this program. If not, see <a href="http://www.gnu.org/licenses/">http://www.gnu.org/licenses/</a>.
+		along with this program. If not, see <a target="_blank" href="http://www.gnu.org/licenses/">http://www.gnu.org/licenses/</a>.
 	</p>
 	<hr/>
+	<a target="_blank" href="https://fba.ppu.edu/">Follow us on our website</a> or <a target="_blank" href="https://github.com/abozanona/User-Behavior-in-Facebook">Fork the project on Github.</a>.
 </div>
 </body>
 </html>
