Update About us
Adding new author and correcting university names with links

--- a/aboutus.html
+++ b/aboutus.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Facebook Privacy Analyzer & Watcher</title>
+	<title>Facebook Privacy Watcher & Analyzer</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<style>
 		.btn-lg.round {
@@ -18,46 +18,40 @@
 	</style>
 </head>
 <body>
-<a href="popup.html" class="btn btn-primary btn-sm round" style="position: fixed; bottom: 10px;left: 10px"><-</a>
-<div>
-	<img src="img/ppulogo.png" style="width:50px;height:50px"/>
-	<h4 style="display: inline">Facebook Privacy Analyzer & Watcher Research</h4><hr/>
-</div>
-<div class="container-fluid">
-	<h3>Whai is this plug-in?</h3>
-	<p>Facebook Privacy Watcher is free software: you can redistribute it and/or modify
-		it under the terms of the GNU General Public License as published by
-		the Free Software Foundation, either version 3 of the License, or
-		(at your option) any later version.</p>
+	<a href="popup.html" class="btn btn-primary btn-sm round" style="position: fixed; bottom: 10px;left: 10px"><-</a>
+	<div>
+		<img src="img/ppulogo.png" style="width:50px;height:50px"/>
+		<h4 style="display: inline">FPWA Research Project</h4><hr/>
+	</div>
+	<div class="container-fluid">
 
-	<hr/>
+		<h3>Which universities working on this study?</h3>
+		<p>In this study, two universities the researchers belongs to:</p>
+		<p><strong><a href="https://ppu.edu" target="_blank">Palestine Polytechnic University</a></strong></p>
+		<p><strong><a href="https://tu-dresden.de/" target="_blank">Technische Universität Dresden</a></strong></p>
+		
+		<hr/>
+		
+		<h3>Authors</h3>
+		<ol>
+			<li>PhD. Hani Salah - hani@ppu.edu</li>
+			<li>PhD. Thomas Paul - thomas.paul@cs.tu-darmstadt.de</li>
+			<li>PhD. Thorsten Sturfe - thorsten.sturfe@tu-dresden.de</li>
+			<li>Abdulhamead Abuzanunah - abozanona@gmail.com</li>
+			<li>Meqdad darweesh - 112085@ppu.edu.ps</li>
+			<li>Hamzah Bahar - 141063@ppu.edu.ps</li>
+		</ol>
+		<hr/>
 
-	<h3>Who are we?</h3>
-	<p>We are a research group in computer field, this tool will help us to collect a behavioral data about the participants.</p>
-	<p>On this research, two universities the researchers belongs to, Palestine Polytechnic University & Technische Universität Darmstadt.</p>
-
-	<hr/>
-
-	<h3>Authors</h3>
-	<ol>
-		<li>Hani Salah - hani@ppu.edu</li>
-		<li>Thomas Paul - thomas.paul@cs.tu-darmstadt.de</li>
-		<li>Abdulhamead Abuzanunah - abozanona@gmail.com</li>
-		<li>Meqdad darweesh - meqdad.darweesh@gmail.com</li>
-		<li>Hamzah Bahar - hamzah.bahar@outlook.com</li>
-	</ol>
-	<hr/>
-
-	<h3>Licence</h3>
-	<p>Facebook Privacy Watcher is distributed in the hope that it will be useful,
-		but WITHOUT ANY WARRANTY; without even the implied warranty of
-		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-		GNU General Public License for more details.</p>
-	<p>You should have received a copy of the GNU General Public License
-		along with this program. If not, see <a target="_blank" href="http://www.gnu.org/licenses/">http://www.gnu.org/licenses/</a>.
-	</p>
-	<hr/>
-	<a target="_blank" href="https://fba.ppu.edu/">Follow us on our website</a> or <a target="_blank" href="https://github.com/abozanona/User-Behavior-in-Facebook">Fork the project on Github.</a>.
-</div>
+		<h3>license</h3>
+		<p>Facebook Privacy Watcher is distributed in the hope that it will be useful,
+			but WITHOUT ANY WARRANTY; without even the implied warranty of
+			MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+			GNU General Public License for more details.</p>
+		<p>You should have received a copy of the GNU General Public License
+			along with this program. If not, see <a href="http://www.gnu.org/licenses/">http://www.gnu.org/licenses/</a>.
+		</p>
+		<hr/>
+	</div>
 </body>
 </html>
