--- a/feedback.html
+++ b/feedback.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Facebook privacy watcher</title>
+	<title>Facebook Privacy Watcher & Analyzer</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<style>
 		.btn-lg.round {
@@ -21,7 +21,7 @@
 	<a href="popup.html" class="btn btn-primary btn-sm round" style="position: fixed; bottom: 10px;left: 10px"><-</a>
 	<div>
 		<img src="img/ppulogo.png" style="width:50px;height:50px"/>
-		<h4 style="display: inline">Palestime poly.. university - A Graduation project</h4><hr/>
+		<h4 style="display: inline">FPWA Research Project</h4><hr/>
 	</div>
 	<div class="container-fluid">
 		<h3>Thank you for filling in ....</h3>
