--- a/jsonViewer.html
+++ b/jsonViewer.html
@@ -49,7 +49,7 @@
     <a id="submit" href="#" class="btn btn-success round">This time only</a> &nbsp;&nbsp;&nbsp;
     <a id="submitAlways" href="#" class="btn btn-success round">Daily</a> &nbsp;&nbsp;&nbsp;
     <a id="submitAlways" href="#" class="btn btn-success round">Weekly</a> &nbsp;&nbsp;&nbsp;
-    <a id="submitAlways" href="#" class="btn btn-success round">Always.</a> &nbsp;&nbsp;&nbsp;
+    <a id="submitAlways" href="#" class="btn btn-success round">Always</a> &nbsp;&nbsp;&nbsp;
     <br/><br/>
     <pre id="json-renderer"></pre>
     <script src="js/global/jquery.json-viewer.js"></script>
