Modifying Settings for colors

--- a/settings.html
+++ b/settings.html
@@ -63,5 +63,9 @@
 		</div>
 		<hr/>
 	</div>
+	<script src="js/global/generalFunctions.js"></script>
+	<script src="js/global/jquery.min.js"></script>
+	<script src="js/classes/serverLayout.js"></script>
+	<script src="settings.js"></script>
 </body>
 </html>
