--- a/jsonViewer.html
+++ b/jsonViewer.html
@@ -47,9 +47,8 @@
     <h1>The collected data about you:</h1><hr/>
     <h3>Do you want to participate and send these anonymized data to the server?</h3>
     <a id="submit" href="#" class="btn btn-success round">This time only</a> &nbsp;&nbsp;&nbsp;
-    <a id="submitAlways" href="#" class="btn btn-success round">Daily</a> &nbsp;&nbsp;&nbsp;
-    <a id="submitAlways" href="#" class="btn btn-success round">Weekly</a> &nbsp;&nbsp;&nbsp;
     <a id="submitAlways" href="#" class="btn btn-success round">Always</a> &nbsp;&nbsp;&nbsp;
+    <a id="submitAlways" href="#" class="btn btn-success round">Don't send and clear</a> &nbsp;&nbsp;&nbsp;
     <br/><br/>
     <pre id="json-renderer"></pre>
     <script src="js/global/jquery.json-viewer.js"></script>
