--- a/jsonViewer.html
+++ b/jsonViewer.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
 
     <script src="js/global/generalFunctions.js"></script>
+    <script src="js/classes/serverLayout.js"></script>
     <script src="js/global/jquery.min.js"></script>
     <link href="js/global/css/jquery.json-viewer.css" type="text/css" rel="stylesheet" />
 
@@ -48,7 +49,7 @@
     <h3>Do you want to participate and send these anonymized data to the server?</h3>
     <a id="submit" href="#" class="btn btn-success round">This time only</a> &nbsp;&nbsp;&nbsp;
     <a id="submitAlways" href="#" class="btn btn-success round">Always</a> &nbsp;&nbsp;&nbsp;
-    <a id="submitAlways" href="#" class="btn btn-success round">Don't send and clear</a> &nbsp;&nbsp;&nbsp;
+    <a id="submitNotToday" href="#" class="btn btn-success round">Don't send and clear</a> &nbsp;&nbsp;&nbsp;
     <br/><br/>
     <pre id="json-renderer"></pre>
     <script src="js/global/jquery.json-viewer.js"></script>
