Fixing some hashing problems and some styling issues.

--- a/faq.html
+++ b/faq.html
@@ -26,6 +26,7 @@
 	<div class="container-fluid">
 		<h3>What are FPA and FPW?</h3>
 		<br>
+
 		<p><b>FPWA</b> (<i>Facebook Privacy Watcher and Analyzer</i>) is a browser extension (i.e. plug-in) for Google Chrome.</p>
 		<p>It collects data about the privacy settings as well as about behavior of Facebook users.</p>
 		<p>It also helps users to customize their privacy settings on Facebook.</p>
@@ -65,19 +66,21 @@
 		<li>Statistics about visited pages</li>
 
 		<hr/>
+
 		<h3>How do we preserve your privacy</h3>
 		<br>
 		<p>Your data will be collected without your identity (e.g. we know that "<i>someone</i>" liked some post,
 			but we cannot know who did that).</p>
-		<p>Furthermore, your data is accumulated with the data of other participants. The collected data will be encoded using hash
-			algorithms (i.e. not reversable) which means that the database of FPWA plugin will contain just the hashed data. 
-			It's important point to know that it's a necessary property in the Hash algorithm to be not reversable, so the hashed data will stay hashed all the time.</p>
+		<p>Furthermore, your data is accumulated with the data of other participants.
+		The collected data will be encoded using hash algorithms (i.e. Your data is not reversible)
+		which means that the database of FPWA plugin will contain just the hashed data.</p>
 
 		<hr/>
+
 		<h3>Why do we collect the aforementioned data about you and other volunteers?</h3>
 		<br>
-		<p>Its a renewing of previous study to examine user behaviour on Facebook.</p>
-		<p>The Research aims to achieve mainly two points:</p>
+		<p>We need (and use) your data only in academic/research purposes.
+			In particular, the objectives of our study is twofold:</p>
 		<li><i><b>Private Data Exposure in Facebook</b></i>
 			<p>The huge set of functionalities Facebook offering to their users
 				attracts lots of people from different age ranges to join Facebook.</p>
@@ -88,7 +91,7 @@
 		<li><i><b>Understanding User Behavior in Facebook</b></i>
 			<p>The behavior of Facebookers is critical for Facebook company itself,
 				and for the users too. For example, the user might be eager	to know statistics about his/her usage of Facebook
-				because he could spend a lot of his time on OSNs at the expense of his duty and responsibilities in the life.</p>
+				because he could spend a lot of his time on OSNs 	at the expense of his duty and responsibilities in the life.</p>
 				<p>These statistics may include: the most Facebook functionalities used, the time user spend on Facebook,
 				or even the time user spend on a specific functionality, and much more of statistics that can be measured.</p> </li>
 
