Modifying plugin and website interface.

--- a/aboutus.html
+++ b/aboutus.html
@@ -17,34 +17,44 @@
 		}
 	</style>
 </head>
+
 <body>
 	<a href="popup.html" class="btn btn-primary btn-sm round" style="position: fixed; bottom: 10px;left: 10px"><-</a>
 	<div>
 		<img src="img/ppulogo.png" style="width:50px;height:50px"/>
+        <img src="img/ger-uni-logo.png" style="width:50px;height:50px"/>
+        <img src="img/projectlogo.png" style="width:50px;height:50px"/>
 		<h4 style="display: inline">FPWA Research Project</h4><hr/>
 	</div>
+
 	<div class="container-fluid">
 
-		<h3>Which universities working on this study?</h3>
-		<p>In this study, two universities the researchers belongs to:</p>
-		<p><strong><a href="https://ppu.edu" target="_blank">Palestine Polytechnic University</a></strong></p>
-		<p><strong><a href="https://tu-dresden.de/" target="_blank">Technische Universität Dresden</a></strong></p>
+		<h5>Our work is a cooperation between the <a href="https://citce.ppu.edu/en/departments" target="_blank">Department of Computer Engineering</a> -
+		<a href="https://www.ppu.edu" target="_blank">Palestine Polytechnic University</a>, and the
+		<a href="https://tu-dresden.de/ing/informatik/sya/ps/studium?set_language=en" target="_blank">Chair of Privacy and Security</a> -
+		<a href="https://tu-dresden.de/" target="_blank">TU Dresden</a> </h5>
 		
 		<hr/>
+
+		<h3>Contact us:</h3>
+		<br>
+
+		<h4>Development team:</h4>
+		<strong>Abdulhamead Abuzanunah - <a href="mailto:abozanona@gmail.com">abozanona@gmail.com</a></strong> <br>
+		<strong>Meqdad darweesh - <a href="mailto:meqdad.darweesh@gmail.com">meqdad.darweesh@gmail.com</a></strong> <br>
+		<strong>Hamzah Bahar - <a href="mailto:hamzah.bahar@outlook.com">hamzah.bahar@outlook.com</a></strong> <br>
+
+		<br>
 		
-		<h3>Authors</h3>
-		<ol>
-			<li>PhD. Hani Salah - hani@ppu.edu</li>
-			<li>PhD. Thomas Paul - thomas.paul@cs.tu-darmstadt.de</li>
-			<li>PhD. Thorsten Sturfe - thorsten.sturfe@tu-dresden.de</li>
-			<li>Abdulhamead Abuzanunah - abozanona@gmail.com</li>
-			<li>Meqdad darweesh - 112085@ppu.edu.ps</li>
-			<li>Hamzah Bahar - 141063@ppu.edu.ps</li>
-		</ol>
+		<h4>For press and research - related questions:</h4>
+		<strong><a href="https://tu-dresden.de/ing/informatik/sya/ps/die-professur/inhaber-in" target="_blank">Prof. Dr. Thorsten Sturfe</a> - <a href="mailto:thorsten.strufe@tu-dresden.de">thorsten.strufe@tu-dresden.de</a></strong> <br>
+		<strong><a href="http://staff.ppu.edu/hani" target="_blank">Dr. Hani Salah</a> - <a href="mailto:hani@ppu.edu">hani@ppu.edu</a></strong> <br>
+		<strong>Dr. Thomas Paul - <a href="mailto:thomas.paul@cs.tu-darmstadt.de">thomas@thomas-paul.de</a></strong> <br>
+
 		<hr/>
 
 		<h3>license</h3>
-		<p>Facebook Privacy Watcher is distributed in the hope that it will be useful,
+		<p>Facebook Privacy Watcher & Analyzer is distributed in the hope that it will be useful,
 			but WITHOUT ANY WARRANTY; without even the implied warranty of
 			MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 			GNU General Public License for more details.</p>
