--- a/popup.html
+++ b/popup.html
@@ -20,6 +20,8 @@
 <body>
 	<div>
 		<img src="img/ppulogo.png" style="width:50px;height:50px"/>
+        <img src="img/ger-uni-logo.png" style="width:50px;height:50px"/>
+        <img src="img/projectlogo.png" style="width:50px;height:50px"/>
 		<h4 style="display: inline">FPWA Research Project</h4><hr/>
 	</div>
 	<div class="container-fluid">
