--- a/settings.html
+++ b/settings.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Facebook Privacy Watcher & Analyzer</title>
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<style>
-		.btn-lg.round {
-			border-radius: 24px;
-			margin-bottom: 10px;
-		}
-		body{
-			width:650px;
-			margin: 30px;
-		}
-		.left-separator{
-			border-left: solid 2px #CCCCCC;
-		}
-	</style>
-</head>
+	<head>
+			<title>Facebook Privacy Watcher & Analyzer</title>
+			<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+			<style>
+				.btn-lg.round {
+					border-radius: 24px;
+					margin-bottom: 10px;
+				}
+				body{
+					width:650px;
+					margin: 30px;
+				}
+				.left-separator{
+					border-left: solid 2px #CCCCCC;
+				}
+			</style>
+		</head>
 <body>
 	<a href="popup.html" class="btn btn-primary btn-sm round" style="position: fixed; bottom: 10px;left: 10px"><-</a>
 	<div>
 		<img src="img/ppulogo.png" style="width:50px;height:50px"/>
+        <img src="img/ger-uni-logo.png" style="width:50px;height:50px"/>
+        <img src="img/projectlogo.png" style="width:50px;height:50px"/>
 		<h4 style="display: inline">FPWA Research Project</h4><hr/>
 	</div>
 	<div class="container-fluid">
-		<h3>Change settings</h3><br/>
+		<h3>Privacy settings (Coloring)</h3><br/>
 		<div class="row">
 			<div class="col-sm-4">
 				<h4>Posts colors</h4>
@@ -52,11 +54,11 @@
 				</table>
 			</div>
 			<div class="col-sm-8">
-				<h6>Posts colors are fixed, They were chosen based on a previous study.</h6>
+				<h6>This feature is for the privacy levels (Colors) in your Facebook accounts.</h6>
 			</div>
 		</div>
 		<hr/>
-		<label><input id="isFBWEnabled" type="checkbox"> Coloring posts</label><br/>
+		<label><input id="isFBWEnabled" type="checkbox" checked> Coloring posts</label><br/>
 		<div style="visibility: hidden">
 			<hr/>
 			<input type="email" id="email" placeholder="example@company.com"/> <a id="submit" href="#" class="btn btn-primary round">subscribe to see the results of our study</a><br/>
