Sunday meeting modifications.

--- a/jsonViewer.html
+++ b/jsonViewer.html
@@ -60,6 +60,7 @@
     <a id="submit" href="#" class="btn btn-success round">This time only</a> &nbsp;&nbsp;&nbsp;
     <a id="submitAlways" href="#" class="btn btn-success round">Always</a> &nbsp;&nbsp;&nbsp;
     <a id="submitNotToday" href="#" class="btn btn-success round">Don't send and clear</a> &nbsp;&nbsp;&nbsp;
+    <b id="lastchoice">Your last choice was ...</b>
     <br>
     <br>
     <div id="jsonFieldsExplanation">
@@ -317,9 +318,6 @@
         session: 497,
         back_time: 1517259417360
         }
-
-
-        
 
 
         appId: "c9a97b7a4137c5b6b7fdc5bc36442d4111d9e613c1c1392e95f40734a0ffa7fd",
