--- a/faq.html
+++ b/faq.html
@@ -26,7 +26,7 @@
 		<h4 style="display: inline">FPWA Research Project</h4><hr/>
 	</div>
 	<div class="container-fluid">
-		<h3>What are FPA and FPW?</h3>
+		<h3>What is FPWA?</h3>
 		<br>
 
 		<p> <strong>FPWA</strong> (<i>Facebook Privacy Watcher and Analyzer</i>)
