--- a/aboutus.html
+++ b/aboutus.html
@@ -40,16 +40,16 @@
 		<br>
 
 		<h4>Development team:</h4>
-		<strong>Abdulhamead Abuzanunah - <a href="mailto:abozanona@gmail.com">abozanona@gmail.com</a></strong> <br>
-		<strong>Meqdad darweesh - <a href="mailto:meqdad.darweesh@gmail.com">meqdad.darweesh@gmail.com</a></strong> <br>
-		<strong>Hamzah Bahar - <a href="mailto:hamzah.bahar@outlook.com">hamzah.bahar@outlook.com</a></strong> <br>
+		<strong>Abdulhamead Abuzanunah - abozanona(at)gmail.com</strong> <br>
+		<strong>Meqdad darweesh - meqdad.darweesh(at)gmail.com</strong> <br>
+		<strong>Hamzah Bahar - hamzah.bahar(at)outlook.com</strong> <br>
 
 		<br>
 		
 		<h4>For press and research - related questions:</h4>
-		<strong><a href="https://tu-dresden.de/ing/informatik/sya/ps/die-professur/inhaber-in" target="_blank">Prof. Dr. Thorsten Sturfe</a> - <a href="mailto:thorsten.strufe@tu-dresden.de">thorsten.strufe@tu-dresden.de</a></strong> <br>
-		<strong><a href="http://staff.ppu.edu/hani" target="_blank">Dr. Hani Salah</a> - <a href="mailto:hani@ppu.edu">hani@ppu.edu</a></strong> <br>
-		<strong>Dr. Thomas Paul - <a href="mailto:thomas.paul@cs.tu-darmstadt.de">thomas@thomas-paul.de</a></strong> <br>
+		<strong>Prof. Dr. Thorsten Sturfe - thorsten.strufe(at)tu-dresden.de</strong> <br>
+		<strong>Dr. Hani Salah - hani(at)ppu.edu</strong> <br>
+		<strong>Dr. Thomas Paul - fpwa(at)thomas-paul.de</strong> <br>
 
 		<hr/>
 
